--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "packageManager": "pnpm@10.6.5",
   "dependencies": {
+    "@types/express": "^5.0.1",
+    "@types/node": "^22.13.11",
     "express": "^4.21.2"
   }
 }
