--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
       "forceConsistentCasingInFileNames": true,
       "outDir": "./build",
       "rootDir": "./src",
-      "resolveJsonModule": true
+      "resolveJsonModule": true,
+      "sourceMap": true,
     },
     "include": ["src"],
     "exclude": ["node_modules", "build"]
